{
    "appTitle": "Quản lý chi tiêu",
    "expenseManagement": "Quản lý chi tiêu",
    "income": "Thu nhập",
    "expense": "Chi tiêu",
    "top5Expense": "Top 5 chi tiêu",
    "top5Income": "Top 5 thu nhập",
    "refreshData": "Làm mới dữ liệu",
    "settings": "Cài đặt",
    "language": "Ngôn ngữ",
...
